# noaa-oracle

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml  security-audit.yml
config/: README.md  daemon.example.toml  litestream.production.yml  litestream.yml  oracle.example.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  fs.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: coordinates.rs  lib.rs  main.rs  parquet_handler.rs  s3_storage.rs  utils.rs
crates/daemon/src/domains/forecasts/: download_forecast.rs  xml_forecast.rs
crates/daemon/src/domains/observations/: download_observations.rs  xml_observation.rs
crates/oracle/: Cargo.toml  Settings.toml  build.rs
crates/oracle/migrations/: 20250111000001_initial_schema.sql
crates/oracle/src/: app_error.rs  file_access.rs  lib.rs  main.rs  nostr_extractor.rs  oracle.rs  startup.rs  utils.rs
crates/oracle/src/db/: event_data.rs  event_db_migrations.rs  mod.rs  outcome_generator.rs  sqlite.rs  weather_data.rs
crates/oracle/src/routes/: mod.rs
crates/oracle/src/routes/events/: oracle_routes.rs
crates/oracle/src/routes/files/: download.rs  upload.rs
crates/oracle/src/routes/home/: index.rs
crates/oracle/src/routes/stations/: weather_routes.rs
crates/oracle/src/routes/ui/: dashboard.rs  event_detail.rs  events.rs  fragments.rs  mod.rs  raw_data.rs
crates/oracle/src/templates/: README.md  loader.js  mod.rs  styles.css
crates/oracle/src/templates/components/: forecast_toggle.js  local_time.js  mod.rs  navbar.js  navbar.rs  theme_toggle.js  theme_toggle.rs  weather_view.js
crates/oracle/src/templates/fragments/: event_row.rs  event_stats.rs  events_table.rs  forecast_detail.rs  mod.rs  oracle_info.rs  weather_map.rs  weather_table.rs
crates/oracle/src/templates/layouts/: base.rs  mod.rs
crates/oracle/src/templates/pages/: dashboard.rs  event_detail.rs  events.rs  mod.rs
crates/oracle/src/templates/pages/home/: home.js  mod.rs
crates/oracle/src/templates/pages/raw_data/: mod.rs  raw_data.js
crates/oracle/tests/api/: attestation.rs  create_event.rs  create_event_entry.rs  etl_workflow.rs  get_events.rs  helpers.rs  main.rs  ui_fragments.rs
crates/oracle/ui/: index.html
deploy/helm/noaa-daemon/: .argocd-source-noaa-daemon.yaml  .gitignore  Chart.yaml  values.yaml
deploy/helm/noaa-daemon/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  s3-secret.yaml  serviceaccount.yaml
deploy/helm/noaa-oracle/: .argocd-source-noaa-oracle.yaml  Chart.yaml  values.yaml
deploy/helm/noaa-oracle/files/: bg-switchover.sh
deploy/helm/noaa-oracle/templates/: _helpers.tpl  bg-hook-job.yaml  bg-rbac.yaml  cleanup-cronjob.yaml  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  s3-secret.yaml  secret.yaml  service.yaml  serviceaccount.yaml  update-cronjob.yaml
docs/: SQLITE_S3_MIGRATION_PLAN.md
e2e/: package-lock.json  package.json  playwright.config.js
e2e/fixtures/weather_data/2026-01-15/: forecasts_2026-01-15T00:10:49.950574861Z.parquet  observations_2026-01-15T00:10:49.950574861Z.parquet
e2e/fixtures/weather_data/2026-01-17/: forecasts_2026-01-17T17:16:19.76658783Z.parquet  observations_2026-01-17T17:16:19.76658783Z.parquet
e2e/tests/: ui.spec.js
ui/: index.html
