[workspace]
resolver = "2"
members = ["crates/core", "crates/daemon", "crates/oracle"]

[workspace.package]
version = "1.9.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/tee8z/noaa-oracle"
authors = ["tee8z"]

[workspace.dependencies]
# Internal crates
noaa-oracle-core = { path = "crates/core" }

# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI & Config
clap = { version = "4.3", features = ["derive", "env"] }
config = "0.14"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }

# Logging
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"

# Time
time = { version = "0.3", features = ["parsing", "formatting", "macros", "serde"] }

# Data
parquet = "54.0"
arrow = "54.0"
parquet_derive = "54.0"

# Crypto/SSL
openssl = { version = "0.10", features = ["vendored"] }

# Other
rustix = "0.38"

[profile.release]
lto = "thin"
strip = true
