[package]
name = "noaa-oracle-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for NOAA Oracle services"

[dependencies]
anyhow.workspace = true
log.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml.workspace = true

[features]
default = []
