[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NOAA weather data fetcher daemon"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
# Internal
noaa-oracle-core.workspace = true

# Core
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# CLI
clap.workspace = true

# Async
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }
futures.workspace = true

# HTTP
reqwest = { workspace = true, features = ["stream", "multipart", "json"] }
reqwest-retry = "0.6"
reqwest-middleware = "0.3"

# Logging
log.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true

# Time
time.workspace = true

# Data
parquet.workspace = true
arrow.workspace = true
parquet_derive.workspace = true

# XML parsing
serde-xml-rs = "0.6"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

# Other
regex = "1.10"
openssl.workspace = true
