[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NOAA weather data fetcher daemon"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
# Internal
noaa-oracle-core.workspace = true

# Core
anyhow.workspace = true
serde.workspace = true

# CLI
clap.workspace = true

# Async
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }
futures.workspace = true

# HTTP
reqwest = { workspace = true, features = ["stream", "multipart", "json"] }
reqwest-retry = "0.7"
reqwest-middleware = "0.4"

# Logging
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true

# Time
time.workspace = true

# Data
parquet.workspace = true
parquet_derive.workspace = true

# XML parsing
serde-xml-rs = "0.6"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
