[package]
name = "oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NOAA Oracle REST API server and DLC attestation service"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
# Internal
noaa-oracle-core.workspace = true

# Core
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# CLI
clap.workspace = true

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
futures.workspace = true

# Web framework
axum = { version = "0.8", features = [
    "http1",
    "macros",
    "multipart",
    "tokio",
    "tracing",
    "original-uri",
] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = "1.4"
h2 = "0.4"

# Database
duckdb = "1.1"

# DLC / Crypto
dlctix = "0.0.8"
nostr-sdk = "0.38"
openssl.workspace = true
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# Logging
log.workspace = true
fern = { version = "0.6", features = ["colored"] }

# Time
time.workspace = true

# API docs
utoipa = { version = "5.3", features = [
    "axum_extras",
    "time",
    "uuid",
    "preserve_order",
    "preserve_path_order",
] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Other
uuid = { version = "1.4", features = ["v7", "serde"] }
regex = "1.10"
itertools = "0.13"
scooby = "0.5"
bincode = "1.3"
mime = "0.3"
num_cpus = "1.16"
rayon = "1.8"
async-trait = "0.1"
rustix.workspace = true

[dev-dependencies]
tower = "0.4"
mockall = "0.13"
