[package]
name = "oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NOAA Oracle REST API server and DLC attestation service"

[[bin]]
name = "oracle"
path = "src/main.rs"

[features]
default = []
bundled = ["duckdb/bundled"]

[dependencies]
# Internal
noaa-oracle-core.workspace = true

# Core
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
futures.workspace = true

# Web framework
axum = { version = "0.8", features = [
    "http1",
    "macros",
    "multipart",
    "tokio",
    "tracing",
    "original-uri",
] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
hyper = "1.8"
maud = { version = "0.26", features = ["axum"] }

# Database
duckdb = "1.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# DLC / Crypto
dlctix = "0.0.8"
nostr-sdk = "0.38"
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
base64 = "0.22"
rand = "0.8"

# Logging
log.workspace = true
fern.workspace = true

# Time
time.workspace = true

# API docs
utoipa = { version = "5.4", features = [
    "axum_extras",
    "time",
    "uuid",
    "preserve_order",
    "preserve_path_order",
] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Other
uuid = { version = "1.19", features = ["v7", "serde"] }
regex = "1.12"
itertools = "0.14"
scooby = "0.5"
async-trait = "0.1"

[build-dependencies]
minify-js = "0.6"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tower = "0.5"
mockall = "0.14"

[package.metadata.cargo-machete]
ignored = ["hex", "minify-js", "sha2", "walkdir"]

[lints]
workspace = true
